--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "prettier": "prettier . --check",
+    "prettier:fix": "prettier . --write"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/howlingtesters/WarsztatyTemp.git"
@@ -16,7 +21,16 @@
   },
   "homepage": "https://github.com/howlingtesters/WarsztatyTemp#readme",
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
     "@playwright/test": "^1.55.0",
-    "@types/node": "^24.5.1"
+    "@types/node": "^24.5.1",
+    "@typescript-eslint/eslint-plugin": "^8.44.0",
+    "@typescript-eslint/parser": "^8.44.0",
+    "eslint": "^9.35.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-playwright": "^2.2.2",
+    "husky": "^8.0.0",
+    "prettier": "3.6.2",
+    "typescript": "^5.9.2"
   }
 }
