--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,9 +1,9 @@
 name: Playwright Tests
 on:
   push:
-    branches: [ main, master ]
+    branches: [ main, master, temp-version ]
   pull_request:
-    branches: [ main, master ]
+    branches: [ main, master, temp-version ]
 jobs:
   test:
     timeout-minutes: 60
