--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright tests
-      run: npx playwright test -g "get started link*" show-report playwright-report
+      run: npx playwright test show-report playwright-report -g "get started link*" 
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
